[tool.poetry]
name = "heartbreak"
version = "0.1.0"
description = ""
authors = ["egor187 <py.egor.py@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.7.1"
djoser = "^2.1.0"
python-dotenv = "^0.18.0"
psycopg2 = "^2.9.1"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
